added local loggin authentication
