# controllers/auth.js
@@ -1,13 +1,49 @@
 const dotenv = require('dotenv');
 dotenv.config();
 const axios = require('axios');
+const db = require('../models');
+const User = db.user;
 
 const login = (req, res) => {
-    console.log("Lets login");
+    const username = req.body.username
+    const password = req.body.password
+
+    if (!username || !password) {
+        res.status(400).send({ message: 'Username and password field cannot be empty.' });
+        return;
+    }
+
+    User.findOne({ username: username })
+    .then((user) => {
+      if (user === null || user.length == 0) {
+        res.status(400).send({ message: 'Could not find username ' + username + ' in the database.' });
+      } else {
+        user.validatePassword(password)
+        .then((valid) => {
+          if (!valid) {
+            res.status(400).send({ message: 'Password is not valid. Please try again.' });
+          } else {
+            req.session.isAuth = true;
+            res.status(201).send();
+          }
+        });
+      }
+    })
+    .catch((err) => {
+      console.log(err.message)
+      res.status(500).send({
+        message: 'Login error. Please try again later.'});
+    });
 };
   
 const logout = (req, res) => {
-    console.log("Lets logout");
+    req.session.destroy((err) => {
+        if (err) {
+            res.status(500).send({message: 'Logout error. Please try again later.'});
+        } else {
+            res.status(200).send();
+        }
+    });
 };
 
 
@@ -42,7 +78,8 @@ const checkGitHub = (req, res) => {
         const value = (token.split('=', 2)[1]).split('&', 1)[0];
 
         if (key === 'access_token') {
-            res.status(200).send({ token: value });
+            req.session.isAuth = true;
+            res.status(200).send({ message: 'User authorized with GitHub token'});
         } else if (key === 'error') {
             res.status(400).send({ message: value });
         } else {
