# routes/users.js
@@ -1,5 +1,6 @@
 const express = require('express');
 const router = express.Router();
+const isAuth = require("../middleware/is-auth");
 
 const usersController = require('../controllers/users');
 
@@ -7,7 +8,7 @@ router.get('/', usersController.getAll);
 router.get('/:username', usersController.getSingle);
 
 router.post('/', usersController.insertUser);
-router.put('/:username', usersController.updateContact);
-router.delete('/:username', usersController.deleteContact);
+router.put('/:username', isAuth, usersController.updateContact);
+router.delete('/:username', isAuth, usersController.deleteContact);
 
 module.exports = router;
